--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
         <div class="container">
             <img src="https://media.tenor.com/ek8ccJEdkKkAAAAi/cat-noodles.gif">
             <input type="text" id="input-field" placeholder="Bread">
+                    <div class="dropdown">
+            <input type="text" id="categoryInput" placeholder="Click to select category" readonly required>
+            <div class="dropdown-content">
+                <a href="#" data-category="Fruit">Fruits</a>
+                <a href="#" data-category="Vegetable">Vegetable</a>
+                <a href="#" data-category="Grain">Grain</a>
+                <a href="#" data-category="Meat and Poultry">Meat and Poultry</a>
+                <a href="#" data-category="Seafood">Seafood</a>
+                <a href="#" data-category="Dairy product">Dairy product</a>
+                <a href="#" data-category="Seed or Nut">Seed or Nut</a>
+                <a href="#" data-category="Dessert">Dessert</a>
+                <a href="#" data-category="Spices">Spices</a>
+                <a href="#" data-category="Sauce">Sauce</a>
+             
+            </div>
+        </div>
+
+
             <button id="add-button">Add to cart</button>
             <ul id="shopping-list">
             </ul>
